modification des notifs et modification dans page projet et jsplus

--- a/Code/src/css/page_projet.css
+++ b/Code/src/css/page_projet.css
@@ -93,6 +93,12 @@ h1 {
     color: white;
 }
 
+.badge.refuse {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
 .badge.en-attente {
     background-color: #f39c12;
     color: white;
