--- a/Code/src/css/layout_erreur.css
+++ b/Code/src/css/layout_erreur.css
@@ -6,7 +6,6 @@
     margin-bottom: auto;
     width: 30%;
 
-    cursor: pointer;
     image-rendering: pixelated;
 }
 
@@ -15,13 +14,15 @@
 }
 
 .dog {
-    position: absolute;
-    width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 #text_error {
     text-align: center;
-    padding: 210px 0px 20px;
+    padding: 20px 0px 20px;
     font-family:'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: larger;
     color: white;
